Fix warnings with gradlew signPlugin and gradlew publishPlugin